--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "deploy": "npm run build && push-dir --dir=dist --branch=master --allow-unclean --clean"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "fullpage-vue": "^1.8.1",
     "vue": "^2.5.2",
+    "vue-agile": "^0.3.7",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -55,6 +58,7 @@
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -63,6 +67,7 @@
     "postcss-url": "^7.2.1",
     "push-dir": "^0.4.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
