--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.0",
+    "firebase": "^5.5.8",
     "fullpage-vue": "^1.8.1",
     "vue": "^2.5.2",
     "vue-agile": "^0.3.7",
