--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fullpage-vue": "^1.8.1",
     "vue": "^2.5.2",
     "vue-agile": "^0.3.7",
+    "vue-moment": "^4.0.0",
     "vue-mq": "^0.2.1",
     "vue-router": "^3.0.1"
   },
