--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-moment": "^4.0.0",
     "vue-mq": "^0.2.1",
     "vue-router": "^3.0.1",
-    "vue-zondicons": "^0.1.10"
+    "vue-zondicons": "^0.1.10",
+    "vuebar": "0.0.20"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
